fix bug so that light to dark mode transition doesn't happen on each page reload

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 body {
   margin: 0;
   font-family: 'Arial', sans-serif;
+}
+
+body.with-transition {
   transition: background-color 0.5s, color 0.5s;
 }
 
